--- a/index.html
+++ b/index.html
@@ -129,19 +129,20 @@
         <h2 class="display-5 fw-bold text-center">Projects</h2>
         <div class="row justify-content-center mt-5">
           <div class="col-md-4 mb-4">
-            <div class="card h-100" style="width: 100%">
+            <div class="card h-100 pt-4" style="width: 100%">
               <img
                 src="assets/images/inventory system logo.png"
                 class="card-img-top img-fluid pt-3"
                 style="
                   max-width: 150px;
+                  min-width: 150px;
                   height: auto;
                   object-fit: contain;
                   margin: 0 auto;
                 "
                 alt="Inventory System Logo"
               />
-              <div class="card-body text-center">
+              <div class="card-body d-flex flex-column text-center">
                 <h5 class="card-title fw-bold">Inventory System</h5>
                 <p class="card-text my-3">
                   IT 5 Final Project. SmartStock Tracker, an inventory system.
@@ -149,7 +150,7 @@
                 <a
                   href="https://github.com/jeriel08/inventory_system"
                   target="_blank"
-                  class="btn btn-outline-dark"
+                  class="btn btn-outline-dark mt-auto"
                   >Check it out!</a
                 >
               </div>
@@ -167,9 +168,9 @@
                   object-fit: contain;
                   margin: 0 auto;
                 "
-                alt="Inventory System Logo"
+                alt="ByteVault Logo"
               />
-              <div class="card-body text-center">
+              <div class="card-body d-flex flex-column text-center">
                 <h5 class="card-title fw-bold">ByteVault Inventory System</h5>
                 <p class="card-text my-3">
                   IT 9 Laravel 11 Final Project. Inventory system for computer
@@ -178,7 +179,7 @@
                 <a
                   href="https://github.com/jeriel08/byte-vault"
                   target="_blank"
-                  class="btn btn-outline-dark"
+                  class="btn btn-outline-dark mt-auto"
                   >Check it out!</a
                 >
               </div>
